Add username to the review

--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -161,6 +161,7 @@
                                                 <i class="far fa-star text-warning"></i>
                                             {% endfor %}
                                         </div>
+                                        <p>By: {{ review.user.username }}</p>
                                     </li>
                                 {% endfor %}
                             </ul>
