Remove double quote

--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -30,7 +30,7 @@
 
         <li class="nav-item">
             <a class="logo-font font-weight-bold nav-link text-black"
-                href="{% url 'products:products' %}?category=special_offers"" role=" button">
+                href="{% url 'products:products' %}?category=special_offers" role=" button">
                 Special Offers
             </a>
         </li>
