Edit errors handlers

--- a/templates/errors/500.html
+++ b/templates/errors/500.html
@@ -1,23 +1,26 @@
 {% extends 'base.html' %}
 {% load static %}
-
-{% comment %} Extra Title {% endcomment %}
-{% block extra_title %}500 Error{% endblock %}
-
 {% block content %}
-    <div class="dashboard">
-        <div class="dashboard__form form__delete warning__msg">
-        <h1 class="dashboard__main--name">500</h1>
-        <div class="access__image">
-            <img src="{% static 'images/two_gears.png' %}" alt="Access denied warning image">
+    <div class="container header-container">
+        <div class="row">
+            <div class="col"></div>
         </div>
-        <div class="warning__msg">Oh! It seems that there are some internal problems with the server.</div>
-        <div class="form__btns accent">
-            <a href="{% url 'products_list' %}" aria-label="Go to Tags page" class="btn btn__getstarted">
-            <i class="fas fa-store"></i>
-            Back to Store
-            </a>
-        </div>
+    </div>
+    <div class="container h-100">
+        <div class="row h-100">
+            <div class="col-7 col-md-6 my-auto">
+                <h1 class="display-4 logo-font text-black">
+                    The page you are looking for isn't available
+                </h1>
+                <div class="my-5">
+                    <h4>
+                        <a href="{% url 'products' %}" 
+                            class="shop-now-button btn btn-lg rounded-0 text-uppercase py-3">
+                                Return to shop
+                        </a>
+                    </h4>
+                </div>
+            </div>
         </div>
     </div>
 {% endblock %}
