--- a/wishlist/templates/wishlist/view_wishlist.html
+++ b/wishlist/templates/wishlist/view_wishlist.html
@@ -1,29 +1,31 @@
 {% extends 'base.html' %}
 
+{% block extra_css %}
+    <style>
+        body {
+            padding-top: 80px;
+            background: none;
+        }
+
+        .product-item {
+            border: 1px solid #ddd;
+            padding: 15px;
+            margin: 15px;
+            text-align: center;
+        }
+
+        .product-image {
+            max-width: 100%;
+            height: auto;
+        }
+
+        .remove-button {
+            margin-top: 10px;
+        }
+    </style>
+{% endblock %}
+
 {% block content %}
-<style>
-    body {
-        padding-top: 80px;
-        background: none;
-    }
-
-    .product-item {
-        border: 1px solid #ddd;
-        padding: 15px;
-        margin: 15px;
-        text-align: center;
-    }
-
-    .product-image {
-        max-width: 100%;
-        height: auto;
-    }
-
-    .remove-button {
-        margin-top: 10px;
-    }
-</style>
-
     <div class="container mt-5 pt-5">
         {% for message in messages %}
             <div class="alert alert-{{ message.tags }}">
