--- a/templates/base.html
+++ b/templates/base.html
@@ -77,8 +77,9 @@
             <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
                 <ul class="list-inline list-unstyled text-center text-lg-right my-0">
                     <li class="list-inline-item dropdown">
-                        <a class="text-black nav-link" href="#" id="user-options" data-toggle="dropdown"
-                            aria-haspopup="true" aria-expanded="false">
+                        <a class="text-black nav-link d-block d-lg-none" href="#" id="user-options-dropdown" data-toggle="dropdown"
+                        aria-haspopup="true" aria-expanded="false">
+
                             <div class="text-center">
                                 <div><i class="fas fa-user fa-lg"></i></div>
                                 <p class="my-0">My Account</p>
