--- a/staticfiles/css/base.css
+++ b/staticfiles/css/base.css
@@ -8,6 +8,13 @@ body {
     height: calc(100vh - 164px);
     color: #555;
     font-family: 'Lato';
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
+}
+
+main {
+    flex: 1 0 auto;
 }
 
 /* from Bulma */
@@ -166,26 +173,15 @@ body {
 .footer {
     height: 1.5em;
     position: fixed;
-    left: -25%; 
     bottom: 0;
-    width: 25%;
+    width: 100%;
     background-color: rgba(18, 17, 17, 0.7);
     color: white;
     text-align: center;
-    animation: slideRight 10s linear infinite; 
 }
 
 .footer a {
     color: aliceblue;
-}
-
-@keyframes slideRight {
-    0% {
-        left: -25%; 
-    }
-    100% {
-        left: 100%; 
-    }
 }
 
 
@@ -194,7 +190,7 @@ body {
 /* Slightly larger container on xl screens */
 @media (min-width: 1200px) {
     .container {
-        max-width: 80%;
+        max-width: 100%;
     }
 }
 
@@ -228,7 +224,7 @@ body {
 @media (max-width: 576px) {
 
     .footer{
-        width: 75%;
+        width: 100%;
     }
 
     #delivery-banner {
@@ -247,6 +243,6 @@ body {
 
 @media (max-width: 576px) {
     .footer{
-        width: 75%;
+        width: 100%;
     }
 }
